Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9585

General Menubar is not well painted when application is themed.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.0
    • Applications
    • Virtual Box

    Description

      When application is themed menubar labels are not painted.

      Attachments

        1. fontbug_post_r67388.patch
          2 kB
        2. fontbug.patch
          2 kB
        3. fontbug2.patch
          2 kB
        4. menubarthemed_patched.png
          menubarthemed_patched.png
          59 kB
        5. menubarthemed.png
          menubarthemed.png
          71 kB
        6. themedmenu.patch
          1 kB

        Issue Links

          Activity

            People

              AmineKhaldi AmineKhaldi
              Tonix Tonix
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: