[USER32][UXTHEME] Properly paint the general menubar when application is themed. Brought to you by Stefano Toncich aka Tonix. CORE-9585

svn path=/trunk/; revision=68116